login page added

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,84 +1,77 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Login Form using HTML CSS Only | Codehal</title>
-    <link rel="stylesheet" href="css/login.css">
-</head>
-<body>
-    <div class="container">
-        <div class="login-box">
-            <h2>Login</h2>
-            <form action="#">
-                <div class="input-box">
-                    <input type="email" required>
-                    <label>Email</label>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+
+    <title>Form</title>
+  </head>
+  <body>
+    <section class="form-07">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="_form_07_main">
+              <div class="row">
+                <div class="col-sm-6 ncv-kl-bn">
+                  <div class="_form_07_main_sub_01">
+                    <div class="form-07-head">
+                      <h2>Smarteye</h2>
+                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+                    </div>
+                    <div class="form-7-social-media">
+                      <ol>
+                        <li><i class="fa fa-facebook"></i></li>
+                        <li><i class="fa fa-twitter"></i></li>
+                        
+                        <li><i class="fa fa-youtube"></i></li>
+                        <li><i class="fa fa-linkedin"></i></li>
+                      </ol>
+                    </div>
+                  </div>
                 </div>
-                <div class="input-box">
-                    <input type="password" required>
-                    <label>Password</label>
+                <div class="col-sm-6 cv-kl-bn">
+                  <div class="_pl_nb_df">
+                    <div class="_bg_cs">
+                      <h2>Sign into your account</h2>
+                    </div>
+                    <div class="form-group">
+                      <label>Enter Your Email</label>
+                      <input type="email" name="email" class="form-control" type="text" placeholder="Enter Email" required="" aria-required="true">
+                    </div>
+
+                    <div class="form-group">
+                      <input type="password" name="password" class="form-control" type="text" placeholder="Enter password" required="" aria-required="true">
+                    </div>
+
+                    <div class="checkbox form-group">
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="">
+                        <label class="form-check-label" for="">
+                          Remember me
+                        </label>
+                      </div>
+                      <a href="#">Forgot Password</a>
+                    </div>
+
+                    <div class="form-group">
+                      <div class="_btn_04">
+                        <a href="#">Login</a>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="forgot-pass">
-                    <a href="#">Forgot your password?</a>
-                </div>
-                <button type="submit" class="btn">Login</button>
-                <div class="signup-link">
-                    <a href="register">Signup</a>
-                </div>
-            </form>
+              </div>
+            </div>
+          </div>
         </div>
-        <span style="--i:0;"></span>
-        <span style="--i:1;"></span>
-        <span style="--i:2;"></span>
-        <span style="--i:3;"></span>
-        <span style="--i:4;"></span>
-        <span style="--i:5;"></span>
-        <span style="--i:6;"></span>
-        <span style="--i:7;"></span>
-        <span style="--i:8;"></span>
-        <span style="--i:9;"></span>
-        <span style="--i:10;"></span>
-        <span style="--i:11;"></span>
-        <span style="--i:12;"></span>
-        <span style="--i:13;"></span>
-        <span style="--i:14;"></span>
-        <span style="--i:15;"></span>
-        <span style="--i:16;"></span>
-        <span style="--i:17;"></span>
-        <span style="--i:18;"></span>
-        <span style="--i:19;"></span>
-        <span style="--i:20;"></span>
-        <span style="--i:21;"></span>
-        <span style="--i:22;"></span>
-        <span style="--i:23;"></span>
-        <span style="--i:24;"></span>
-        <span style="--i:25;"></span>
-        <span style="--i:26;"></span>
-        <span style="--i:27;"></span>
-        <span style="--i:28;"></span>
-        <span style="--i:29;"></span>
-        <span style="--i:30;"></span>
-        <span style="--i:31;"></span>
-        <span style="--i:32;"></span>
-        <span style="--i:33;"></span>
-        <span style="--i:34;"></span>
-        <span style="--i:35;"></span>
-        <span style="--i:36;"></span>
-        <span style="--i:37;"></span>
-        <span style="--i:38;"></span>
-        <span style="--i:39;"></span>
-        <span style="--i:40;"></span>
-        <span style="--i:41;"></span>
-        <span style="--i:42;"></span>
-        <span style="--i:43;"></span>
-        <span style="--i:44;"></span>
-        <span style="--i:45;"></span>
-        <span style="--i:46;"></span>
-        <span style="--i:47;"></span>
-        <span style="--i:48;"></span>
-        <span style="--i:49;"></span>
-    </div>
-</body>
+      </div>
+    </section>
+  </body>
 </html>
