--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -10,7 +10,7 @@
     <link href="/css/font-awesome.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
 
-    <title>Form</title>
+    <title>Kiona</title>
   </head>
   <body>
     <section class="form-07">
@@ -18,6 +18,7 @@
         <div class="row">
           <div class="col-12">
             <div class="_form_07_main">
+              <form action="">
               <div class="row">
                 <div class="col-sm-6 ncv-kl-bn">
                   <div class="_form_07_main_sub_01">
@@ -67,6 +68,7 @@
                     </div>
                   </div>
                 </div>
+              </form>
               </div>
             </div>
           </div>
