registration and login added

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -55,16 +55,17 @@
                 <div class="col-sm-6 ncv-kl-bn">
                   <div class="_form_07_main_sub_01">
                     <div class="form-07-head">
-                      <h2>Smarteye</h2>
+                      <h2>Kiona</h2>
                       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
                     </div>
                     <div class="form-7-social-media">
                       <ol>
-                        <li><i class="fa fa-facebook"></i></li>
-                        <li><i class="fa fa-twitter"></i></li>
+                        <li><a href="#"><i class="fa fa-google"></i></a></li>
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         
-                        <li><i class="fa fa-youtube"></i></li>
-                        <li><i class="fa fa-linkedin"></i></li>
+                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                       </ol>
                     </div>
                   </div>
@@ -80,6 +81,7 @@
                     </div>
 
                     <div class="form-group">
+                      <label>Enter Your Password</label>
                       <input type="password" name="password" class="form-control" type="text" placeholder="Enter password" required="" aria-required="true">
                     </div>
 
@@ -95,9 +97,9 @@
 
                     <div class="form-group">
                       <div class="_btn_04">
-                        <a href="#">Login</a>
+                        <button type="submit" class="login-button"> Login</button>
                       </div>
-                      <div class="mt-4" id="last">
+                      <div class="mt-4">
                         <p class="text-danger m-0">Don't have an account ?</p>
                         <a style="text-decoration: none;" href="/register">SignUp</a>
                     </div>
