admin registration and login is added

--- a/views/users/registration.ejs
+++ b/views/users/registration.ejs
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
     <!--===============================================================================================-->
-    <link rel="icon" type="image/png" href="images/icons/favicon.png" />
+    <link rel="icon" type="image/png" href="/kiona-logo.png" />
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
     <!--===============================================================================================-->
