--- a/views/admin/UserDetails/users.ejs
+++ b/views/admin/UserDetails/users.ejs
@@ -19,7 +19,7 @@
   <!-- Layout styles -->
   <link rel="stylesheet" href="../../admin/css/style.css">
   <!-- End layout styles -->
-  <link rel="shortcut icon" href="../../admin/images/favicon.ico" />
+  <link rel="shortcut icon" href="../../admin/images/kiona-logo.png" />
 </head>
 
 <body>
