--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -18,7 +18,7 @@
     <!-- Layout styles -->
     <link rel="stylesheet" href="/admin/css/style.css">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="/admin/images/favicon.ico" />
+    <link rel="shortcut icon" href="/admin/images/kiona-logo.png" />
   </head>
   <body>
     <div class="container-scroller">
