admin side user detailes

--- a/views/admin/UserDetails/users.ejs
+++ b/views/admin/UserDetails/users.ejs
@@ -190,51 +190,30 @@
                                     </tr>
                                   </thead>
                                   <tbody>
-                                    <tr>
-                                      <td>
-                                        <img src="/admin/images/faces/face1.jpg" class="mr-2" alt="image"> David Grey
-                                      </td>
-                                      <td> Fund is not recieved </td>
-                                      <td>
-                                        <label class="badge badge-gradient-success">DONE</label>
-                                      </td>
-                                      <td> Dec 5, 2017 </td>
-                                      <td> WD-12345 </td>
-                                    </tr>
-                                    <tr>
-                                      <td>
-                                        <img src="/admin/images/faces/face2.jpg" class="mr-2" alt="image"> Stella
-                                        Johnson
-                                      </td>
-                                      <td> High loading time </td>
-                                      <td>
-                                        <label class="badge badge-gradient-warning">PROGRESS</label>
-                                      </td>
-                                      <td> Dec 12, 2017 </td>
-                                      <td> WD-12346 </td>
-                                    </tr>
-                                    <tr>
-                                      <td>
-                                        <img src="/admin/images/faces/face3.jpg" class="mr-2" alt="image"> Marina Michel
-                                      </td>
-                                      <td> Website down for one week </td>
-                                      <td>
-                                        <label class="badge badge-gradient-info">ON HOLD</label>
-                                      </td>
-                                      <td> Dec 16, 2017 </td>
-                                      <td> WD-12347 </td>
-                                    </tr>
-                                    <tr>
-                                      <td>
-                                        <img src="/admin/images/faces/face4.jpg" class="mr-2" alt="image"> John Doe
-                                      </td>
-                                      <td> Loosing control on server </td>
-                                      <td>
-                                        <label class="badge badge-gradient-danger">REJECTED</label>
-                                      </td>
-                                      <td> Dec 3, 2017 </td>
-                                      <td> WD-12348 </td>
-                                    </tr>
+
+                                    <% if(users.length>0){
+                                          for(let i=0 ; i<users.length ; i++){
+                                            %>
+                                            <tr>
+                                              <td>
+                                                <img src="/Photos/userImages/<%= users[i].image %>" class="mr-2" alt="<%= users[i].image %>"> <%= users[i].name %>
+                                              </td>
+                                              <td> <%= users[i].email %> </td>
+                                              <td> <%= users[i].mobile %> </td>
+                                              // <td>
+                                              //   <label class="badge badge-gradient-success">DONE</label>
+                                              // </td>
+                                              <td> <%= users[i].address %> </td>
+                                              <td> WD-12345 </td>
+                                            </tr>
+                                            <%
+                                          }
+                                    }else{
+                                      %>
+                                        <tr>
+                                          <td colspan="6">User not fount</td>
+                                        </tr>
+                                    }
                                   </tbody>
                                 </table>
                               </div>
